--- a/lerna.json
+++ b/lerna.json
@@ -11,7 +11,8 @@
   "command": {
     "publish": {
       "npmClient": "npm",
-      "verifyAccess": false
+      "verifyAccess": false,
+      "registry": "https://www.npmjs.com"
     },
     "bootstrap": {
       "registry": "https://www.npmjs.com",
@@ -20,5 +21,5 @@
       ]
     }
   },
-  "version": null
+  "version": "0.0.0.1"
 }
